# feature_tracking

./: CMakeLists.txt  LICENSE  README.md  featureTracking.pro  feature_tracking.files
include/: Debug.hpp  Stats.hpp  Timing.hpp
include/detectors/: AdaptativeThresholdDetect.hpp  CannyDetect.hpp  FastDetect.hpp  FeatureDetect.hpp  FindContourDetect.hpp  HarrisCornerDetect.hpp  HarrisLaplaceDetect.hpp  HoughDetect.hpp  KMeanDetect.hpp  LucidDetect.hpp  MSDDetectorDetect.hpp  OtsuThresholdDetect.hpp  RoadDetect.hpp  SegmentationDetect.hpp  SiftDetect.hpp  SimpleBlobDetect.hpp  StarDetectorDetect.hpp  SurfDetect.hpp  ThresholdDetect.hpp  VggDetect.hpp
include/trackers/: Tracker.hpp
include/util/: CustomSerializer.hpp  Debug.hpp  GridMosaic.hpp  Mosaic.hpp  TestUtil.hpp
src/: Debug.cpp  featureDetectorBenchmark.cpp  featureDetectorDemo.cpp  surfMatchDemo.cpp  trackingDemo.cpp
src/detectors/: FeatureDetect.cpp
src/trackers/: Tracker.cpp
src/util/: CustomSerializer.cpp  Debug.cpp  GridMosaic.cpp  Mosaic.cpp
test/src/: dummy_ut.cpp  main.cpp
test/src/test/: dummy2_ut.cpp
test/src/util/: features_serialization_ut.cpp
tools/cmake/: git.cmake  gitCMakeLists.txt  versions.cmake
